--- a/mymap.html
+++ b/mymap.html
@@ -3,6 +3,73 @@
 	<head>
 		<meta charset = "utf-8"/>
 		<title>Staj Projem</title>
+		
+		<!-- CSS -->
+		<style>
+			body {
+				background-color: lightblue;
+			}
+
+			h1 {
+				color: black;
+				text-align: left-side;
+			}
+
+			p {
+				font-family: verdana;
+				font-size: 20px;
+				display: block;
+				margin-top: 1em;
+				margin-bottom: 1em;
+				margin-left: 0;
+				margin-right: 0;
+			}
+
+			div.cinereousTable {
+			  border: 1px solid #948473;
+			  background-color: #FFE3C6;
+			  width: 30%;
+			  height: 100%;
+			  text-align: center;
+			  border-collapse: collapse;
+			}
+			.divTable.cinereousTable .divTableCell, .divTable.cinereousTable .divTableHead {
+			  border: 1px solid #948473;
+			  padding: 4px 4px;
+			}
+			.divTable.cinereousTable .divTableBody .divTableCell {
+			  font-size: 13px;
+			}
+			.cinereousTable .tableFootStyle {
+			  font-size: 16px;
+			}
+			
+			.divTable.cinereousTable .divTableHeading {
+			  background: #948473;
+			  background: -moz-linear-gradient(top, #afa396 0%, #9e9081 66%, #948473 100%);
+			  background: -webkit-linear-gradient(top, #afa396 0%, #9e9081 66%, #948473 100%);
+			  background: linear-gradient(to bottom, #afa396 0%, #9e9081 66%, #948473 100%);
+			}
+			.divTable.cinereousTable .divTableHeading .divTableHead {
+			  font-size: 17px;
+			  font-weight: bold;
+			  color: #F0F0F0;
+			  text-align: left;
+			  border-left: 2px solid #948473;
+			}
+			.divTable.cinereousTable .divTableHeading .divTableHead:first-child {
+			  border-left: none;
+			}			
+			
+			/* DivTable.com */
+			.divTable{ display: table; }
+			.divTableRow { display: table-row; }
+			.divTableHeading { display: table-header-group;}
+			.divTableCell, .divTableHead { display: table-cell;}
+			.divTableHeading { display: table-header-group;}
+			.divTableFoot { display: table-footer-group;}
+			.divTableBody { display: table-row-group;}	
+		</style>	
 	</head>
 	<body>
 		<h1>My Map Project</h1>
